@@ -1316,6 +1316,10 @@ define_mpn(addmul_1c)
 define_mpn(addmul_2)
 define_mpn(addmul_3)
 define_mpn(addmul_4)
+define_mpn(addmul_5)
+define_mpn(addmul_6)
+define_mpn(addmul_7)
+define_mpn(addmul_8)
 define_mpn(add_n_sub_n)
 define_mpn(add_n_sub_nc)
 define_mpn(addaddmul_1msb0)
@@ -1368,6 +1372,8 @@ define_mpn(mul_1c)
 define_mpn(mul_2)
 define_mpn(mul_3)
 define_mpn(mul_4)
+define_mpn(mul_5)
+define_mpn(mul_6)
 define_mpn(mul_basecase)
 define_mpn(mul_n)
 define_mpn(mullo_basecase)
